# Hybrid-Information-Retrieval

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
bench/: README.md  __init__.py  cli.py  latency.py  report.py
bench/reports/: latency.json  latency.md  latency_no_rerank.json  latency_no_rerank.md
eval/: README.md  __init__.py  aggregate.py  cli.py  configs.py  metrics.py  qrels.py  report.py  runner.py
eval/reports/: summary.csv  summary.md
eval/runs/: abl1_retrieval_mode__bm25_only.json
src/retrieval/: __init__.py  api.py  cli.py  config.py  embeddings.py  hashing.py  ingestion.py  manifest.py  models.py  qdrant_store.py  reranker.py  search.py
src/retrieval/chunkers/: __init__.py  base.py  fixed.py  recursive.py  semantic.py
src/retrieval/datasets/: __init__.py  nfcorpus.py
