[project]
name = "ir3-retrieval"
version = "0.1.0"
description = "Production-grade hybrid retrieval platform (BM25 + dense + RRF + cross-encoder) over NFCorpus, with incremental ingestion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.12",
    "fastembed>=0.4.2",
    "langchain-text-splitters>=0.3",
    "langchain-experimental>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "rich>=13.7",
    "datasets>=3.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "ranx>=0.3.20",
]

[project.scripts]
ir3 = "retrieval.cli:app"
ir3-eval = "eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval", "eval"]

[tool.uv]
package = true

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]
